--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy = { version = "0.11.3", features = ["dynamic_linking"] }
 bevy_egui = "0.22.0"
 bevy-inspector-egui = "0.20.0"
 bevy_panorbit_camera = "0.8.0"
+bytemuck = "1.14.0"
 
 [profile.dev]
 opt-level = 1
